feat: implement logical parallel traversal with concurrent branches and JPA dirty-checking persistence